fix overflowing in footer and header

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -50,6 +50,7 @@
 }
 
 .footer__socials-list {
+  flex-wrap: wrap;
   margin-top: 53px;
 }
 
