--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -25,6 +25,10 @@
   align-items: center;
 }
 
+.header__logo {
+  flex: 0 0 auto;
+}
+
 .header__image {
   max-width: 878px;
   width: 100%;
@@ -36,7 +40,6 @@
 
 .header__list {
   display: flex;
-  align-items: center;
   list-style: none;
   padding: 0;
   margin: 0;
