--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -1,6 +1,9 @@
 .navigation__list {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .navigation__link {
